--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
-        android:hardwareAccelerated="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -14,9 +16,18 @@
         android:theme="@style/Theme.MythicVenture"
         tools:targetApi="31">
         <activity
-            android:name=".Characters"
+            android:name=".Level1"
+            android:exported="false"
             android:screenOrientation="landscape"
-            android:exported="false" />
+            />
+        <activity
+            android:name=".Levels"
+            android:exported="false"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".Characters"
+            android:exported="false"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
